Fixed general CSS issues, fixed centering of the controls

--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@ function checkroutine() {
 	
 });
 </script></head>
-	<body>
-	<div id="images" class="js-masonry" data-masonry-options='{ "columnWidth": 200, "itemSelector": ".item" }'>
+<body>
+<div id="images" class="js-masonry" data-masonry-options='{ "columnWidth": 200, "itemSelector": ".item" }'>
 </div>
 <div id="quit">
 Click here to disable randomizer
@@ -177,7 +177,7 @@ Click here to disable randomizer
 Click here to enable randomizer...
 </div>
 <span id="disclaimer">
-		By using this service, you agree to <a href="http://imgur.com/removalrequest/">report</a> anything that violates Imgur's <a href="http://imgur.com/tos">TOS
+		By using this service, you agree to <a href="http://imgur.com/removalrequest/">report</a> anything that violates Imgur's <a href="http://imgur.com/tos">TOS</a>
 </span>
 </body>
 </html>
