--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 <script type='text/javascript'>
 // run when the window loads
 $(window).load(function(){
+
+var size = "250px";
+//
+// functions
+//
+
 // called when the user wants to start browsing
 	function browse(e) {
 		// start browsing
@@ -23,6 +29,7 @@ $(window).load(function(){
 			$("#instructions").css( "opacity", "0");
 			$("#quit").css( "opacity", ".8");
 			$("img").css( "opacity", "1");
+			// make it so mouseover on the top box fades it in and out
 			$("#quit").mouseenter(function() {
 				if (flag) {
 				$(this).css( "opacity", "1");
@@ -34,17 +41,20 @@ $(window).load(function(){
 				$(this).css( "opacity", ".8");
 				});
 			$("#quit").click(function() {
-				flag = false;
-				$("img").css( "opacity", ".5");
 				browse(0);
 			});
+			// set default image width (medium)
+			changesize("medium");
+			
 			// start by fetching one image to fill the <div>
-			Imgur.fetch(1);
+			Imgur.fetch(1,size);
 			// call the routine that will determine if it needs to pull more images to fill the <div>
 			browseVar = window.setInterval(function(){checkroutine()},50);
 		};
 		// stop browsing
 		if ( e == 0 ) {
+			flag = false;
+			$("img").css( "opacity", ".5");
 			window.clearInterval(browseVar);
 			$("#instructions").css( "opacity", "1");
 			$("#quit").css( "opacity", "0");
@@ -54,7 +64,7 @@ $(window).load(function(){
 // hunt for images, then add them to the <div>
 	var Imgur = {
 		// main routine, use when you want to add another random image
-		fetch: function(num) {
+		fetch: function(num,size) {
 			var self=this;
 			// for loop through the requested number of images
 			for (var x = 0; x < num; x++) {
@@ -62,7 +72,8 @@ $(window).load(function(){
 				self.hunt(function(id) {
 					// push the image and link to the <div>
 					// imgur accepts any id with .jpg, even if it's a gif or png
-					$('#images').append("<a href='http://i.imgur.com/" + id + ".jpg' class='item' id='i' target='_blank' rel='noreferrer'><img src='http://i.imgur.com/" + id + "s.png' width='250px' /></a>");
+					// <id>s.png is a smaller, thumbnail-sized image
+					$('#images').append("<a href='http://i.imgur.com/" + id + ".jpg' class='item' id='i' target='_blank' rel='noreferrer'><img src='http://i.imgur.com/" + id + "s.png' width='" + size + "' /></a>");
 				});
 			}
 		},
@@ -150,9 +161,27 @@ function checkroutine() {
 	// check if the document has scrolled within 200 px of the bottom
     if (getDocHeight() < getScrollXY()[1] + window.innerHeight + 200) {
 		// get another image
-		Imgur.fetch(1);
+		Imgur.fetch(1,size);
     }
+	// make sure the images are the right size
+	changesize(size);
 };
+
+function changesize(size) {
+	if ( size == "small" ) {
+		$("img").css( "width", "90px");
+	};
+	if ( size == "medium" ) {
+		$("img").css( "width", "150px");
+	};
+	if ( size == "large" ) {
+		$("img").css( "width", "250px");
+	};
+};
+//
+// event handlers
+//
+
 	// check for pressed keys
 	$(document).keyup(function(e) {
 		// escape
@@ -165,6 +194,10 @@ function checkroutine() {
 		browse(1);
 	});
 	
+	$("#size a").click(function() {
+		size = $(this).text();
+		changesize(size);
+	});
 });
 </script></head>
 <body>
@@ -177,7 +210,10 @@ Click here to disable randomizer
 Click here to enable randomizer...
 </div>
 <span id="disclaimer">
-		By using this service, you agree to <a href="http://imgur.com/removalrequest/">report</a> anything that violates Imgur's <a href="http://imgur.com/tos">TOS</a>
+By using this service, you agree to <a href="http://imgur.com/removalrequest/">report</a> anything that violates Imgur's <a href="http://imgur.com/tos">TOS</a>
+</span>
+<span id="size">
+<a href="#">small</a> <a href="#">medium</a> <a href="#">large</a>
 </span>
 </body>
 </html>
