Added analytics support

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Random Imgur Generator</title>
 	<meta name="Description" content="Generate imgur images randomly">
 	<script type='text/javascript' src='http://code.jquery.com/jquery-1.5.2.js'></script>
+	<script type='text/javascript' src='analytics.js'></script>
 <!--	<script type='text/javascript' src='masonry.pkgd.min.js'></script> -->
 	<link rel="stylesheet" type="text/css" href="style.css" />
 <center>
