--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<script type='text/javascript' src='http://code.jquery.com/jquery-1.5.2.js'></script>
 	<script type='text/javascript' src='analytics.js'></script>
 <!--	<script type='text/javascript' src='masonry.pkgd.min.js'></script> -->
+	<script type='text/javascript' src='riveted.min.js'></script>
+	<script>riveted.init();</script>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 <center>
 <div id=topbar>
