--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ function changesize(size) {
 	});
 	
 	// when a user clicks on an image, send an analytics event
-	$("img").click(_gaq.push(['_trackEvent', 'Clicked', 'Image Clicked']););
+	$("img").click(_gaq.push(['_trackEvent', 'Clicked', 'Image Clicked']));
 });
 </script></head>
 <body>
