--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script type='text/javascript' src='analytics.js'></script>
 <!--	<script type='text/javascript' src='masonry.pkgd.min.js'></script> -->
 	<script type='text/javascript' src='riveted.min.js'></script>
-	<script>riveted.init({idleTimeout: 120});</script>
+	<script>riveted.init({idleTimeout: 120, reportInterval: 10});</script>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 <center>
 <div id=topbar>
