When changing size, scroll to bottom

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@ function changesize(size) {
 		$("img").css( "width", "250px");
 		imagesize="250px";
 	};
+	$("html, body").animate({ scrollTop: $(document).height() }, 10)
 };
 
 //
